# libzakformini

./: Makefile.am  configure.ac  libzakformini.pc.in
debian/: changelog  control  copyright  rules
debian/patches/: 0001-Glib-old-version-gobject-macro.patch  0002-aclocal-old.patch  series
src/: Makefile.am  form.c  form.h  libzakformini.h
tests/: Makefile.am
